...
                                                <rect key="frame" x="0.0" y="0.0" width="136" height="42"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6N-NO-3bU">
                                                        <rect key="frame" x="0.0" y="0.0" width="34" height="42"/>
                                                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                        <state key="normal" title="AC">
                                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="clearDataAndResetCalculator" destination="BYZ-38-t0r" eventType="touchUpInside" id="eQu-B1-ZXi"/>
                                                        </connections>
                                                    </button>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="an9-TN-iam">
                                                <rect key="frame" x="151" y="27" width="60" height="60"/>
                                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" title="xⁿ">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="pressedOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QEI-CU-yGo"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-Oz-2Gw">
                                                <rect key="frame" x="219" y="27" width="60" height="60"/>
                                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" title="10ⁿ">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="pressedOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UtH-2h-5uM"/>
                                                </connections>
                                            </button>
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6mh-HG-BnX">
                                                <rect key="frame" x="148" y="30" width="60" height="60"/>
                                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" title="1/x">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="pressedOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H5h-oh-5wo"/>
                                                </connections>
                                            </button>
...
